--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,13 @@ android {
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
+
     }
 
     buildTypes {
@@ -32,7 +39,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava3:$room_version"
+    //implementation "androidx.room:room-rxjava3:$room_version"
     implementation "androidx.room:room-common:$room_version"
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
